# telegram-cc-bridge

./: .gitignore  Cargo.toml  env.local  guide.md  test.sh
migrations/: 001_init.sql
src/: config.rs  main.rs
src/adapters/: claude_code.rs  codex.rs  gemini.rs  mod.rs
src/bot/: formatter.rs  handlers.rs  mod.rs
src/media/: image.rs  mod.rs  voice.rs
src/pty/: supervisor.rs
src/session/: manager.rs  mod.rs  recorder.rs  state.rs
